Setting up the docker containers

--- a/.docker/api/Dockerfile
+++ b/.docker/api/Dockerfile
@@ -1,10 +1,10 @@
+FROM jwilder/dockerize:latest
 FROM python:3.7
+COPY --from=0 /usr/local/bin/dockerize /usr/local/bin/dockerize
+
 ENV PYTHONUNBUFFERED 1
 ENV DEBIAN_FRONTEND noninteractive
-
-RUN apt-get update && \
-    apt-get -yq install build-essential curl apt-transport-https redis-tools postgresql-client envsubst && \
-    pip install pipenv
+RUN pip install pipenv
 
 RUN mkdir /app
 WORKDIR /app
@@ -14,8 +14,6 @@ RUN pipenv install
 
 COPY . /app/
 
-RUN python manage.py collectstatic --clear --noinput > /dev/null
-
 EXPOSE 5000
 
-CMD /app/.docker/api/docker-cmd.sh
+CMD pipenv run /app/.docker/api/docker-cmd.sh
