--- a/.docker/redis/Dockerfile
+++ b/.docker/redis/Dockerfile
@@ -8,7 +8,7 @@ COPY .docker/redis/redis.conf     /app/redis.conf.template
 
 
 EXPOSE 6379
-ENV PASSWORD 'not-a-real-password'
+ENV REDIS_PASSWORD 'not-a-real-password'
 
 HEALTHCHECK CMD dockerize -template /app/healthcheck.template:/app/healthcheck && sh /app/healthcheck
 CMD dockerize -template /app/redis.conf.template:/app/redis.conf && redis-server /app/redis.conf
