--- a/.docker/redis/redis.conf
+++ b/.docker/redis/redis.conf
@@ -78,7 +78,7 @@ always-show-logo no
 ################################## SECURITY ###################################
 
 # Replace this password with
-requirepass {{ .Env.PASSWORD }}
+requirepass {{ .Env.REDIS_PASSWORD }}
 
 ############################## MEMORY MANAGEMENT ################################
 
