--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,14 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.7
+        environment:
+          DATABASE_URL: postgres://api_user:my-secret-password@127.0.0.1:5432/api_schema
 
       - image: circleci/postgres:11-alpine
         environment:
-          POSTGRES_DB: api_schema
           POSTGRES_USER: api_user
           POSTGRES_PASSWORD: my-secret-password
+          POSTGRES_DB: api_schema
 
     working_directory: ~/app
 
@@ -24,6 +26,7 @@ jobs:
       - run:
           name: Run the Tests
           command: |
+            pipenv run python manage.py migrate
             pipenv run python manage.py test
 
       - store_artifacts:
