Tweaking the configs to support static files

--- a/.docker/api/Dockerfile
+++ b/.docker/api/Dockerfile
@@ -9,11 +9,11 @@ RUN pip install pipenv
 RUN mkdir /app
 WORKDIR /app
 
-COPY Pipfile Pipfile.lock /app/
-RUN pipenv install
-
 COPY . /app/
+RUN pipenv install
+RUN mkdir -p /var/www/tradier-api/static
 
 EXPOSE 5000
 
+ENV STATIC_ROOT /var/www/tradier-api/static
 CMD pipenv run /app/.docker/api/docker-cmd.sh
