--- a/.docker/api/Dockerfile
+++ b/.docker/api/Dockerfile
@@ -5,6 +5,10 @@ COPY --from=0 /usr/local/bin/dockerize /usr/local/bin/dockerize
 ENV PYTHONUNBUFFERED 1
 ENV DEBIAN_FRONTEND noninteractive
 RUN pip install pipenv
+RUN apt-get update && \
+    apt-get install curl && \
+    curl -o /usr/local/bin/ecs-cli https://s3.amazonaws.com/amazon-ecs-cli/ecs-cli-linux-amd64-latest && \
+    chmod +x /usr/local/bin/ecs-cli
 
 RUN mkdir /app
 WORKDIR /app
