--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: .
       dockerfile: .docker/api/Dockerfile
     environment:
+      - DEBUG=True
       - DATABASE_URL=postgres://api_user:yet-not-another-real-password@db:5432/api_schema
       - SECRET_KEY='2qq&&_8cy=h5q!to4nmxhab^na46$b1j27!bqv5ig$p0)-l(fx'
       - ALLOWED_HOSTS=127.0.0.1,localhost
